[gd_scene load_steps=3 format=2]

[ext_resource path="res://Hitbox Hurtbox/hurtbox.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 0.0

[node name="hurtbox" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
[connection signal="invincibility_end" from="." to="." method="_on_hurtbox_invincibility_end"]
[connection signal="invincibility_start" from="." to="." method="_on_hurtbox_invincibility_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
